// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly invalid row and column input 1`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      Array Dimension
      <span
        className="value"
      >
        0 X 0
      </span>
    </p>
    <div
      className="tool-panel-body"
    >
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Cols.
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={1}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="columns"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Rows
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={1}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="rows"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly valid input 1`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      Array Dimension
      <span
        className="value"
      >
        2 X 3
      </span>
    </p>
    <div
      className="tool-panel-body"
    >
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Cols.
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={3}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="columns"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Rows
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={2}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="rows"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly valid input 2`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      Array Dimension
      <span
        className="value"
      >
        2 X 3
      </span>
    </p>
    <div
      className="tool-panel-body collapsed"
    >
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Cols.
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={3}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="columns"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Rows
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={2}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="rows"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly valid input 3`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      Array Dimension
      <span
        className="value"
      >
        3 X 2
      </span>
    </p>
    <div
      className="tool-panel-body collapsed"
    >
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Cols.
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={2}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="columns"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Rows
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={3}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="rows"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly valid input 4`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      Array Dimension
      <span
        className="value"
      >
        3 X 4
      </span>
    </p>
    <div
      className="tool-panel-body collapsed"
    >
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Cols.
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={4}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="columns"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Rows
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={3}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="rows"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly valid input 5`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      Array Dimension
      <span
        className="value"
      >
        5 X 4
      </span>
    </p>
    <div
      className="tool-panel-body collapsed"
    >
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Cols.
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={4}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="columns"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
      <div
        className="control"
      >
        <div
          className="text-center header"
        >
          Rows
        </div>
        <UnitInput
          abbr={false}
          className={Object {}}
          decimal={0}
          defaultValue={5}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="rows"
          isDoOnInput={false}
          max={9007199254740991}
          min={1}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit=""
        />
      </div>
    </div>
  </label>
</div>
`;
